name:                expert-robot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bergey/expert-robot#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable expert-robot
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
                Interpreters.BinInt
                Interpreters.BinDouble
                Interpreters.VariadicInt
                Interpreters.Lists
                Interpreters.Stack
                Interpreters.SwapStack
                Compilers.ExprStack
  default-language:    Haskell2010
  build-tools: alex
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bytestring
                     , text
